--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background: #d6b9e8;
 }
 
 .App-logo {
@@ -8,16 +9,6 @@
   pointer-events: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
