--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  padding: 10px;
+  /* padding: 10px; */
   text-align: center;
   /* height:1000px; */
   width: 100%;
@@ -12,13 +12,14 @@
 }
 
 .displayPage{
-  height: 738px;
+  height: 711px;
   /* display: flex; */
 }
 
 .container{
   background-color: "black";
   opacity: "0.8";
+  height: 711px;
   /* flex:3; */
   background: "black";
   opacity: "0.8";
