--- a/website/src/components/pages/Authors.css
+++ b/website/src/components/pages/Authors.css
@@ -1,5 +1,5 @@
 @media(min-width:468px) {
-  .container1 {
+  .authorContainer1 {
     display: flex;
     /*border: 1px black solid;*/
     padding: 1em;
@@ -9,7 +9,7 @@
     background-color: white;
   }
 
-  .box1 {
+  .authorBox1 {
     flex: 1;
     /*border: 1px black solid;*/
     min-width: 30%;
@@ -17,7 +17,7 @@
     justify-content: center;
   }
 
-  .box2 {
+  .authorBox2 {
     flex: 2;
     /*border: 1px black solid;*/
     min-width: 0;
@@ -31,7 +31,7 @@
     text-align: right;
   }
 
-  .container2 {
+  .authorContainer2 {
     display: flex;
     /*border: 1px black solid;*/
     padding: 1em;
@@ -41,7 +41,7 @@
     background-color: white;
   }
 
-  .box4 {
+  .authorBox4 {
     flex: 1;
     /*border: 1px black solid;*/
     min-width: 30%;
@@ -49,7 +49,7 @@
     justify-content: center;
   }
 
-  .box3 {
+  .authorBox3 {
     flex: 2;
     /*border: 1px black solid;*/
     min-width: 0;
