--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,7 +1,7 @@
 .App {
   /* padding: 10px; */
   text-align: center;
-  /* height:1000px; */
+  height:100vh;
   width: 100%;
 
   background: #11cfaf;
